--- a/code-swag/Base.lproj/Main.storyboard
+++ b/code-swag/Base.lproj/Main.storyboard
@@ -26,12 +26,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vs1-wd-SbZ">
-                                <rect key="frame" x="0.0" y="140" width="375" height="527"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vs1-wd-SbZ">
+                                <rect key="frame" x="0.0" y="154" width="375" height="513"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="143" id="Jwf-vI-eCS" customClass="CategoryCell" customModule="code_swag" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="categoryCell" rowHeight="143" id="Jwf-vI-eCS" customClass="CategoryCell" customModule="code_swag" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="143"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jwf-vI-eCS" id="vpQ-6u-qSK">
@@ -40,6 +39,9 @@
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="digital" translatesAutoresizingMaskIntoConstraints="NO" id="zZ8-rt-XnY">
                                                     <rect key="frame" x="0.0" y="2" width="375" height="138.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="138.5" id="Caf-31-y78"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shirts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JHM-Wg-hS7">
                                                     <rect key="frame" x="114" y="32" width="146" height="37"/>
@@ -67,6 +69,10 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Owb-Yw-Rmv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="16j-dQ-zFl"/>
+                            <constraint firstItem="vs1-wd-SbZ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="KbB-m2-7zP"/>
+                            <constraint firstItem="vs1-wd-SbZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="KrX-PS-7Xl"/>
+                            <constraint firstItem="vs1-wd-SbZ" firstAttribute="top" secondItem="Owb-Yw-Rmv" secondAttribute="bottom" constant="10" id="QRc-9N-Esh"/>
+                            <constraint firstItem="vs1-wd-SbZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ate-jL-lcI"/>
                             <constraint firstItem="Owb-Yw-Rmv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="cEm-53-17A"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -74,11 +80,108 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="CTO-PA-mzL"/>
                     <connections>
                         <outlet property="categoryTable" destination="vs1-wd-SbZ" id="dKB-Xd-y7L"/>
+                        <segue destination="fD2-Mb-LzX" kind="show" id="MzU-aP-B02"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="992.79999999999995" y="-564.46776611694156"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Aix-ad-Lfi">
+            <objects>
+                <viewController id="fD2-Mb-LzX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aqh-YW-K3D">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRODUCT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qM-TR-Yaf">
+                                <rect key="frame" x="10" y="84" width="80.5" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="GKx-ei-T89"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fWl-Ki-tAR">
+                                <rect key="frame" x="0.0" y="154" width="375" height="513"/>
+                                <color key="backgroundColor" red="0.85826459390862941" green="0.85826459390862941" blue="0.85826459390862941" alpha="0.3008882705479452" colorSpace="custom" customColorSpace="sRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mij-6e-JOy">
+                                    <size key="itemSize" width="161" height="240"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="N9f-CT-RWR" customClass="ProductCell" customModule="code_swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="161" height="240"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="161" height="240"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="9Jd-4R-TAF">
+                                                    <rect key="frame" x="2" y="0.0" width="157" height="141"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Rs. 2400" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6N-c2-b0A">
+                                                    <rect key="frame" x="8" y="209" width="135" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Xlbyte logo shirt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGq-cL-iJq">
+                                                    <rect key="frame" x="8" y="161" width="145" height="42"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="CBE-1Z-Loj"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="9Jd-4R-TAF" firstAttribute="leading" secondItem="N9f-CT-RWR" secondAttribute="leading" constant="2" id="2De-fJ-Eld"/>
+                                            <constraint firstItem="9Jd-4R-TAF" firstAttribute="top" secondItem="N9f-CT-RWR" secondAttribute="top" constant="2" id="6Qn-Cr-BWY"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="EGq-cL-iJq" secondAttribute="trailing" id="7so-hZ-Gaj"/>
+                                            <constraint firstAttribute="trailing" secondItem="9Jd-4R-TAF" secondAttribute="trailing" constant="2" id="8AX-8K-1oo"/>
+                                            <constraint firstItem="EGq-cL-iJq" firstAttribute="top" secondItem="9Jd-4R-TAF" secondAttribute="bottom" constant="9" id="8Fd-HA-CPP"/>
+                                            <constraint firstItem="L6N-c2-b0A" firstAttribute="top" secondItem="EGq-cL-iJq" secondAttribute="bottom" constant="6" id="8Vw-FC-hrR"/>
+                                            <constraint firstItem="9Jd-4R-TAF" firstAttribute="leading" secondItem="N9f-CT-RWR" secondAttribute="leading" constant="2" id="AIS-pX-Zt9"/>
+                                            <constraint firstAttribute="trailing" secondItem="9Jd-4R-TAF" secondAttribute="trailing" constant="2" id="Jfl-sR-fQY"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="L6N-c2-b0A" secondAttribute="bottom" constant="2" id="K7N-Rh-5WL"/>
+                                            <constraint firstItem="9Jd-4R-TAF" firstAttribute="top" secondItem="N9f-CT-RWR" secondAttribute="top" constant="2" id="Qmq-uD-m7G"/>
+                                            <constraint firstItem="EGq-cL-iJq" firstAttribute="leading" secondItem="N9f-CT-RWR" secondAttribute="leadingMargin" id="Tis-fL-SML"/>
+                                            <constraint firstItem="L6N-c2-b0A" firstAttribute="leading" secondItem="N9f-CT-RWR" secondAttribute="leadingMargin" id="VgO-wx-bz9"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="L6N-c2-b0A" secondAttribute="trailing" constant="10" id="eUK-qm-r6Y"/>
+                                            <constraint firstItem="EGq-cL-iJq" firstAttribute="centerX" secondItem="N9f-CT-RWR" secondAttribute="centerX" id="kco-Gr-PwN"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="productImage" destination="9Jd-4R-TAF" id="Cza-io-WO3"/>
+                                            <outlet property="productName" destination="EGq-cL-iJq" id="Suq-j6-NNH"/>
+                                            <outlet property="productPrice" destination="L6N-c2-b0A" id="fyl-MV-fRa"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.84103523298049676" green="0.8573253833504747" blue="0.87848984771573602" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1qM-TR-Yaf" firstAttribute="leading" secondItem="5pn-zY-Wmj" secondAttribute="leading" constant="10" id="7Wb-jc-LyP"/>
+                            <constraint firstItem="5pn-zY-Wmj" firstAttribute="trailing" secondItem="fWl-Ki-tAR" secondAttribute="trailing" id="Rc6-yz-8Z5"/>
+                            <constraint firstItem="fWl-Ki-tAR" firstAttribute="leading" secondItem="5pn-zY-Wmj" secondAttribute="leading" id="WP4-rK-vbz"/>
+                            <constraint firstItem="fWl-Ki-tAR" firstAttribute="top" secondItem="1qM-TR-Yaf" secondAttribute="bottom" constant="10" id="Z02-CF-gcI"/>
+                            <constraint firstItem="1qM-TR-Yaf" firstAttribute="top" secondItem="5pn-zY-Wmj" secondAttribute="top" constant="20" id="Zqh-zD-mj9"/>
+                            <constraint firstItem="5pn-zY-Wmj" firstAttribute="bottom" secondItem="fWl-Ki-tAR" secondAttribute="bottom" id="fU9-cr-z55"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5pn-zY-Wmj"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2kh-wl-f4n" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1776.8" y="-564.46776611694156"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2gc-Dm-jtq">
@@ -105,5 +208,6 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
     </resources>
 </document>
